test: some test added
Some test have been added: ImplementationService, ApplicationService and
some for RoomService