@@ -1,21 +1,15 @@
 package co.edu.udea.salasinfo.service.impl;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyLong;
-import static org.mockito.Mockito.*;
-
-import co.edu.udea.salasinfo.dto.request.RoomRequest;
-import co.edu.udea.salasinfo.dto.request.filter.RoomFilter;
+import co.edu.udea.salasinfo.dto.response.room.FreeScheduleResponse;
 import co.edu.udea.salasinfo.dto.response.room.RoomResponse;
 import co.edu.udea.salasinfo.dto.response.room.RoomScheduleResponse;
-import co.edu.udea.salasinfo.dto.response.room.SpecificRoomResponse;
-import co.edu.udea.salasinfo.mapper.request.RoomRequestMapper;
 import co.edu.udea.salasinfo.mapper.response.RoomResponseMapper;
 import co.edu.udea.salasinfo.mapper.response.RoomScheduleResponseMapper;
-import co.edu.udea.salasinfo.mapper.response.SpecificRoomResponseMapper;
-import co.edu.udea.salasinfo.model.*;
-import co.edu.udea.salasinfo.persistence.*;
+import co.edu.udea.salasinfo.model.Reservation;
+import co.edu.udea.salasinfo.model.ReservationState;
+import co.edu.udea.salasinfo.model.Room;
+import co.edu.udea.salasinfo.persistence.ReservationDAO;
+import co.edu.udea.salasinfo.persistence.RoomDAO;
 import co.edu.udea.salasinfo.utils.enums.RStatus;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -24,12 +18,27 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.time.LocalTime;
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
+
 @ExtendWith(MockitoExtension.class)
 class RoomServiceImplTest {
+
+    private static final Long ROOM_ID = 1L;
+    private static final LocalDateTime RESERVATION_START = LocalDateTime.of(2025, 2, 15, 10, 0);
+    private static final LocalDateTime RESERVATION_END = LocalDateTime.of(2025, 2, 15, 12, 0);
+    private static final LocalDate SELECTED_DATE = LocalDate.of(2025, 2, 15);
+    private static final LocalTime HOUR_10_AM = LocalTime.of(10, 0);
+    private static final LocalTime HOUR_11_AM = LocalTime.of(11, 0);
+    private static final LocalTime SIX_AM = LocalTime.of(6, 0);
+    private static final LocalTime NINE_PM = LocalTime.of(21, 0);
 
     @Mock
     private RoomDAO roomDAO;
@@ -38,31 +47,7 @@ class RoomServiceImplTest {
     private ReservationDAO reservationDAO;
 
     @Mock
-    private RoomImplementDAO roomImplementDAO;
-
-    @Mock
-    private RoomApplicationDAO roomApplicationDAO;
-
-    @Mock
-    private RoomRestrictionDAO roomRestrictionDAO;
-
-    @Mock
-    private ImplementDAO implementDAO;
-
-    @Mock
-    private ApplicationDAO applicationDAO;
-
-    @Mock
-    private RestrictionDAO restrictionDAO;
-
-    @Mock
     private RoomResponseMapper roomResponseMapper;
-
-    @Mock
-    private RoomRequestMapper roomRequestMapper;
-
-    @Mock
-    private SpecificRoomResponseMapper specificRoomResponseMapper;
 
     @Mock
     private RoomScheduleResponseMapper roomScheduleResponseMapper;
@@ -70,127 +55,96 @@ class RoomServiceImplTest {
     @InjectMocks
     private RoomServiceImpl roomService;
 
-    @Mock
-    private Room mockRoom;
-    @Mock
-    private Reservation mockReservation;
-    @Mock
-    private Implement mockImplement;
-    @Mock
-    private Application mockApplication;
-
-    private RoomResponse mockRoomResponse;
-    private RoomRequest mockRoomRequest;
-    private SpecificRoomResponse mockSpecificRoomResponse;
+    private Room room;
+    private Reservation reservation;
 
     @BeforeEach
     void setUp() {
-        Reservation reservationMock;
-        reservationMock = new Reservation();
-        reservationMock.setId(1L);
-        reservationMock.setActivityName("Meeting");
-        reservationMock.setActivityDescription("Team Meeting");
-        reservationMock.setStartsAt(LocalDateTime.now().plusDays(1));
-        reservationMock.setEndsAt(LocalDateTime.now().plusDays(1).plusHours(1));
-        reservationMock.setReservationState(new ReservationState(1L, RStatus.PENDING));
+        room = new Room();
+        room.setId(ROOM_ID);
+        room.setReservations(new ArrayList<>()); // Ensure it's initialized
 
-        mockImplement = new Implement();
-        mockImplement.setId(1L);
+        ReservationState acceptedState = new ReservationState();
+        acceptedState.setState(RStatus.ACCEPTED);
 
-        mockRoom = new Room();
-        mockRoom.setId(123L);
-        mockRoom.setBuilding("2");
-        mockRoom.setRoomNum("101");
-        mockRoom.setRoomName("Conference Room");
-        mockRoom.setComputerAmount(10);
-        mockRoom.setSubRoom(0);
-        mockRoom.setReservations(List.of(reservationMock));
+        reservation = new Reservation();
+        reservation.setStartsAt(RESERVATION_START);
+        reservation.setEndsAt(RESERVATION_END);
+        reservation.setReservationState(acceptedState);
+        reservation.setRoom(room);
 
-        mockRoomResponse = new RoomResponse();
-        mockRoomResponse.setId(1);
-        mockRoomResponse.setBuilding("2");
-        mockRoomResponse.setRoomNum("101");
-        mockRoomResponse.setRoomName("Conference Room");
-        mockRoomResponse.setComputerAmount(10);
-        mockRoomResponse.setSubRoom(0);
-
-        mockRoomRequest = new RoomRequest();
-        mockRoomRequest.setComputerAmount(10);
-        mockRoomRequest.setBuilding("2");
-        mockRoomRequest.setRoomNum("101");
-        mockRoomRequest.setRoomName("Conference Room");
-        mockRoomRequest.setSubRoom(0);
-
-        mockSpecificRoomResponse = new SpecificRoomResponse();
-        mockSpecificRoomResponse.setId(123);
-        mockSpecificRoomResponse.setBuilding("2");
-        mockSpecificRoomResponse.setRoomNum("101");
-        mockSpecificRoomResponse.setRoomName("Conference Room");
-        mockSpecificRoomResponse.setComputerAmount(10);
-        mockSpecificRoomResponse.setSubRoom(0);
+        room.getReservations().add(reservation);
     }
 
     @Test
-    void findAll_ReturnsListOfRooms() {
-        // Arrange
-        RoomFilter filter = new RoomFilter(); // Assume you have a valid RoomFilter implementation
-        when(roomDAO.findAll(filter)).thenReturn(Collections.singletonList(mockRoom));
-        when(roomResponseMapper.toResponses(any())).thenReturn(Collections.singletonList(mockRoomResponse));
-
-        // Act
-        List<RoomResponse> responses = roomService.findAll(filter);
-
-        // Assert
-        assertNotNull(responses);
-        assertEquals(1, responses.size());
-        assertEquals(mockRoomResponse, responses.get(0));
-    }
-
-    @Test
-    void findById_ReturnsSpecificRoomResponse() {
-        // Arrange
-        when(roomDAO.findById(anyLong())).thenReturn(mockRoom);
-        when(specificRoomResponseMapper.toResponse(any())).thenReturn(new SpecificRoomResponse());
-
-        // Act
-        SpecificRoomResponse response = roomService.findById(1L);
-
-        // Assert
-        assertNotNull(response);
-        verify(roomDAO).findById(1L);
-    }
-
-
-    @Test
-    void findFreeAt_ReturnsFreeRooms() {
-        LocalDateTime date = LocalDateTime.now();
-        Reservation reservation = new Reservation();
-        reservation.setStartsAt(date.minusHours(1));
-        reservation.setEndsAt(date.plusHours(1));
-        reservation.setRoom(mockRoom);
-        reservation.setReservationState(new ReservationState(1L, RStatus.ACCEPTED));
-
+    void findFreeAt_ShouldReturnEmptyList_WhenNoRoomsAreAvailable() {
         when(reservationDAO.findAll()).thenReturn(List.of(reservation));
-        when(roomDAO.findAll(null)).thenReturn(Collections.singletonList(mockRoom));
-        when(roomResponseMapper.toResponses(any())).thenReturn(Collections.singletonList(mockRoomResponse));
+        when(roomDAO.findAll(null)).thenReturn(List.of(room)); // Only one room, but it's occupied
 
-        List<RoomResponse> freeRooms = roomService.findFreeAt(date);
+        List<RoomResponse> freeRooms = roomService.findFreeAt(RESERVATION_START);
 
-        assertNotNull(freeRooms);
-        assertFalse(freeRooms.isEmpty());
+        assertTrue(freeRooms.isEmpty());
+        verify(roomDAO, times(1)).findAll(null);
+        verify(reservationDAO, times(1)).findAll();
     }
 
     @Test
-    void findRoomSchedule_ReturnsRoomSchedule() {
-        // Arrange
-        when(roomDAO.findById(anyLong())).thenReturn(mockRoom);
-        when(roomScheduleResponseMapper.toResponses(any())).thenReturn(List.of(new RoomScheduleResponse()));
+    void findRoomSchedule_ShouldReturnSchedule_WhenRoomHasReservations() {
+        when(roomDAO.findById(ROOM_ID)).thenReturn(room);
+        when(roomScheduleResponseMapper.toResponses(List.of(reservation))).thenReturn(List.of(new RoomScheduleResponse()));
 
-        // Act
-        List<RoomScheduleResponse> schedule = roomService.findRoomSchedule(1L);
+        List<RoomScheduleResponse> schedule = roomService.findRoomSchedule(ROOM_ID);
 
-        // Assert
-        assertNotNull(schedule);
-        assertEquals(1, schedule.size());
+        assertFalse(schedule.isEmpty());
+        verify(roomDAO, times(1)).findById(ROOM_ID);
+        verify(roomScheduleResponseMapper, times(1)).toResponses(List.of(reservation));
+    }
+
+    @Test
+    void findFreeRoomSchedule_ShouldReturnAvailableHours_WhenRoomHasReservations() {
+        when(roomDAO.findById(ROOM_ID)).thenReturn(room);
+
+        List<FreeScheduleResponse> freeHours = roomService.findFreeRoomSchedule(ROOM_ID, SELECTED_DATE);
+
+        assertFalse(freeHours.stream().anyMatch(hour -> hour.getHour().equals(HOUR_10_AM)));
+        assertFalse(freeHours.stream().anyMatch(hour -> hour.getHour().equals(HOUR_11_AM)));
+        verify(roomDAO, times(1)).findById(ROOM_ID);
+    }
+
+    @Test
+    void findFreeRoomSchedule_ShouldReturnAllHours_WhenRoomHasNoReservations() {
+        room.setReservations(Collections.emptyList()); // No reservations
+
+        when(roomDAO.findById(ROOM_ID)).thenReturn(room);
+
+        List<FreeScheduleResponse> freeHours = roomService.findFreeRoomSchedule(ROOM_ID, SELECTED_DATE);
+
+        assertTrue(freeHours.stream().anyMatch(hour -> hour.getHour().equals(SIX_AM)));
+        assertTrue(freeHours.stream().anyMatch(hour -> hour.getHour().equals(NINE_PM)));
+        verify(roomDAO, times(1)).findById(ROOM_ID);
+    }
+
+    @Test
+    void findFreeRoomSchedule_ShouldReturnOnlyNonOverlappingHours_WhenMultipleReservationsExist() {
+        ReservationState acceptedState = new ReservationState();
+        acceptedState.setState(RStatus.ACCEPTED);
+
+        Reservation secondReservation = new Reservation();
+        secondReservation.setStartsAt(LocalDateTime.of(2025, 2, 15, 14, 0));
+        secondReservation.setEndsAt(LocalDateTime.of(2025, 2, 15, 16, 0));
+        secondReservation.setReservationState(acceptedState);
+        secondReservation.setRoom(room);
+
+        room.getReservations().add(secondReservation);
+
+        when(roomDAO.findById(ROOM_ID)).thenReturn(room);
+
+        List<FreeScheduleResponse> freeHours = roomService.findFreeRoomSchedule(ROOM_ID, SELECTED_DATE);
+
+        assertFalse(freeHours.stream().anyMatch(hour -> hour.getHour().equals(HOUR_10_AM))); // Reserved
+        assertFalse(freeHours.stream().anyMatch(hour -> hour.getHour().equals(HOUR_11_AM))); // Reserved
+        assertFalse(freeHours.stream().anyMatch(hour -> hour.getHour().equals(LocalTime.of(14, 0)))); // Second reservation
+        assertFalse(freeHours.stream().anyMatch(hour -> hour.getHour().equals(LocalTime.of(15, 0)))); // Second reservation
+        verify(roomDAO, times(1)).findById(ROOM_ID);
     }
 }
